manifests/chrismiller.xyz/blog-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-back
  namespace: chrismillerxyz
  labels:
    app: blog-back
    service: web
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: blog-back
  template:
    metadata:
      namespace: chrismillerxyz
      labels:
        app: blog-back
        service: web
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
        - name: cache
          emptyDir:
            medium: Memory
      containers:
        - name: blog-back
          image: ghcr.io/christopherjmiller/chatterbox:0.6.0
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          lifecycle:
            preStop:
              exec:
                command: [/usr/sbin/nginx, -s, quit]
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/cache/nginx
              name: cache
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 101
            runAsGroup: 101
---
apiVersion: v1
kind: Service
metadata:
  name: blog-back
  namespace: chrismillerxyz
  labels:
    service: web
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: blog-back
