manifests/chrismiller.xyz/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chrismillerxyz
  namespace: chrismillerxyz
  labels:
    service: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:8080"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
    - hosts:
        - chrismiller.xyz
        - www.chrismiller.xyz
      secretName: chrismillerxyz-tls
  rules:
    - host: chrismiller.xyz
      http:
        paths:
          - path: /blogapi
            pathType: Prefix
            backend:
              service:
                name: blog-back
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysite
                port:
                  number: 80
    - host: www.chrismiller.xyz
      http:
        paths:
          - path: /blogapi
            pathType: Prefix
            backend:
              service:
                name: blog-back
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysite
                port:
                  number: 80
